Added initial test cases and operator[] function for String
* Current bug in string so test cases incorrectly implemented.

--- a/tst/shaka_scheme/system/base/CMakeLists.txt
+++ b/tst/shaka_scheme/system/base/CMakeLists.txt
@@ -8,3 +8,4 @@ macro_shaka_scheme_test(unit-Bytevector)
 macro_shaka_scheme_test(unit-Character)
 macro_shaka_scheme_test(unit-Vector)
 macro_shaka_scheme_test(unit-BigInteger)
+macro_shaka_scheme_test(unit-String)
